# dtcc-model

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  dtcc-convert-geodata.py  pyproject.toml
.github/workflows/: c-cpp.yml  ci-wheels.yml  ci.yml  docker-image.yml
datamodel_io/: CMakeLists.txt  cityModel.py  dtcc-convert-geodata.py  pointCloud.py
datamodel_io/cpp/: generate_protobuf.cpp
datamodel_io/dtcc/: dtcc_pb2.py
demo/: demo.py
doc/: README.md  installation.md  installation.rst  introduction.md  usage.md
docker/: Dockerfile  createbanner.sh  docker-compose.yml
docker/archive/: docker-compose.yml  dtcc-build-image  dtcc-create-container  dtcc-start-container  dtcc-uninstall
docker/install_scripts/: install_assimp.sh  install_dependencies.sh  install_py_libs.sh  install_python.sh
dockerbase/: Dockerfile  docker-compose.yml
docs/: api.md  api2.md  development.md  installation.md  introduction.md  usage.md
include/: dtcc.pb.cc  dtcc.pb.h  model.pb.h
protobuf/: CMakeLists.txt  build  dtcc.proto
protobuf/include/: BoundingBoxMethods.h  GridFieldMethods.h  GridMethods.h  PointCloudMethods.h  PolygonMethods.h  VectorMethods.h
protodot/: config.json  dtcc-plot-model  dtcc.dot
sandbox/: extensions.py  sandbox.py
src/: build
src/cpp/include/: BoundingBoxMethods.h  GridFieldMethods.h  GridMethods.h  PointCloudMethods.h  PolygonMethods.h  VectorMethods.h
src/cpp/protobuf/: dtcc.pb.cc  dtcc.pb.h
src/cpp/protobuf/include/: GridFieldMethods.h  GridMethods.h  PointCloudMethods.h  PolygonMethods.h
src/cpp/protobuf/src/proto/: dtcc.pb.cc  dtcc.pb.h
src/dtcc/: dtcc_pb2.py
src/dtcc_model/: CityModel.py  Pointcloud.py  __init__.py  _city.py  building.py  city.py  citymodel.py  dtcc_pb2.py  geometry.py  grid.py  gridfield.py  gridfields.py  landuse.py  logging.py  mesh.py  meshes.py  meshfield.py  meshfields.py  model.py  pointcloud.py  raster.py  roadnetwork.py  surface.py  utils.py  volumemesh.py
src/dtcc_model/extensions/: building.py  citymodel.py  mesh.py  pointcloud.py  vector2d.py  vector3d.py  volumemesh.py
src/dtcc_model/geometry/: __init__.py  bounds.py  geometry.py  georef.py  grid.py  mesh.py  pointcloud.py  polygon.py  surface.py  transform.py
src/dtcc_model/object/: __init__.py  building.py  city.py  object.py  raster.py  terrain.py
src/dtcc_model/quantity/: __init__.py  quantity.py  raster.py
src/dtcc_model/src/proto/: dtcc_pb2.py
src/proto/: dtcc.proto
tests/: CMakeLists.txt  run-tests  run-tests.sh
tests/cpp/: CMakeLists.txt
tests/cpp/tests/: TestBoundingBox.h  TestPointCloud.h  TestVector.h
tests/data/: CityModel.pb  building1.pb  building2.pb  pointcloud.pb
tests/data/MinimalCase/: Parameters.json
tests/python/: _test_roads.py  test_bounds.py  test_building.py  test_city.py  test_citymodel.py  test_dtcc_model.py  test_gridfield.py  test_landuse.py  test_pointcloud.py  test_raster.py  test_roads.py  test_surface.py  test_transform.py  tests.py
tests/unittests_cpp/: CMakeLists.txt  run-unittests.cpp
tests/unittests_cpp/tests/: TestBoundingBox.h  TestPointCloud.h  TestPolygon.h  TestVector.h
tests/unittests_py/: test.py  test_datamodelio.py
unittests_cpp/: CMakeLists.txt  Makefile  run-unittests.cpp
unittests_cpp/tests/: TestBoundingBox.h  TestPolygon.h  TestVector.h
utils/: build-classes  generate-uml-diagram  set-python-path
utils/protodot/: dtcc.dot  plot_model.sh
utils/uml-diagram-proto/: dtcc.dot
