[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.7.21"
name = "dtcc-model"
description = "DTCC Model"
readme = "README.md"
authors = [
  { name = "Anders Logg", email = "logg@chalmers.se" },
  { name = "Vasilis Naserentin", email = "vasilis.naserentin@chalmers.se" },
  { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
  { name = "George Spaias" , email= "gspaiasa@ece.auth.gr" },
  { name = "Jens Olsson" , email= "jens.olsson@chalmersindustriteknik.se" },
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = ["protobuf >= 3.20.0, < 3.21.0", "numpy", "shapely", "affine"]

[project.optional-dependencies]
test = ["pytest"]

[tool.cibuildwheel]
skip=["cp311-*", "pp*"]
